--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -6,6 +6,7 @@
 }
 
 .header__image {
+  margin-top: 112px;
   width: 100%;
   z-index: -1;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
