--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,12 +7,21 @@ body {
   background: rgb(253, 252, 252);
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .button {
   height: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 22px;
+  border-radius: 24px;
   color: #fff;
   font-weight: bold;
   padding: 8px 16px;
@@ -22,6 +31,10 @@ body {
 
 .button:hover {
   background: #ffb60c;
+}
+
+.button:active {
+  transform: scale(.98);
 }
 
 .button--orange {
@@ -58,6 +71,40 @@ body {
 
 .button__img {
   height: 16px;
+}
+
+.input__description {
+  font-size: 14px;
+  color: #333;
+  margin-top: 16px;
+}
+
+.input {
+  border: 2px solid #f2f2f2;
+  outline: none;
+  background: #f2f2f2;
+  border-radius: 4px;
+  height: 48px;
+  padding: 8px 16px;
+  font-size: 18px;
+  line-height: 32px;
+  margin-top: 8px;
+  color: #333;
+  width: 100%;
+  box-sizing: border-box;
+  transition: .2s ease;
+}
+
+.input:active {
+  border: 2px solid #57a3ff67;
+}
+
+.input:focus {
+  border: 2px solid #57a3ff67;
+}
+
+.input--error {
+  border: 2px solid rgb(255, 96, 96);
 }
 
 .navbar__wrapper {
