--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -32,7 +32,8 @@
 }
 
 .input__title {
-  font-size: 24px;
+  font-weight: bold;
+  font-size: 20px;
   color: #232f3e;
 }
 
@@ -44,8 +45,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  margin-top: 24px;
+  margin-bottom: 24px;
 }
 
 .continue__shopping {
