--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -55,6 +55,10 @@ button {
   font-size: 16px;
 }
 
+.button--payment {
+  outline: none;
+}
+
 .button--circle {
   height: 32px;
   width: 32px;
@@ -139,7 +143,7 @@ button {
 
 .nav__categories {
   height: 32px;
-  box-shadow: 0px 6px 3px -3px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0px 6px 3px -3px rgba(0, 0, 0, 0.3); */
   background: #232f3e;
   display: flex;
   justify-content: center;
