--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -59,3 +59,33 @@
   height: 18px;
   margin-right: 8px;
 }
+
+.saved__method__wrapper {
+  width: 100%;
+  display: flex;
+  padding: 16px;
+  background: #f2f2f2;
+  border-radius: 8px;
+  margin-top: 8px;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  border: 2px solid #f2f2f2;
+  box-sizing: border-box;
+}
+
+.saved__method--active {
+  border: 2px solid #8fc1ff;
+}
+
+.method__title {
+  font-weight: bold;
+  text-transform: capitalize;
+  margin-right: 16px;
+}
+
+.method__description {
+  font-size: 12px;
+  flex: 1;
+  text-align: right;
+}
