--- a/src/styles/checkout.css
+++ b/src/styles/checkout.css
@@ -128,3 +128,27 @@
   margin-left: 12px;
   cursor: pointer;
 }
+
+.loading__container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 256px;
+  color: #333;
+}
+
+.loader {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin-left: 8px;
+  border: 4px solid rgb(190, 190, 190);
+  border-top: 4px solid #ffb60c; 
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
