--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -268,3 +268,82 @@ button {
   height: 24px;
   margin-right: 8px;
 }
+
+.nav__links--mobile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  display: none;
+}
+
+.mobile__link {
+  height: 42px;
+  width: 42px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f2f2f2;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.user__options {
+  position: absolute;
+  background: #fff;
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
+  top: 110%;
+  right: 0%;
+  height: 60px;
+  width: 136px;
+  border-radius: 8px;
+  padding: 8px 0px;
+  display: none;
+  box-sizing: border-box;
+}
+
+.user__options--open {
+  display: flex;
+}
+
+.user__option {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 44px;
+  background: #fafafa;
+}
+
+.mobile__link--icon {
+  height: 18px;
+}
+
+@media only screen and (max-width: 600px) {
+
+  .navbar {
+    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
+    padding: 16px 16px;
+  }
+  
+  .nav__logo {
+    height: 26px;
+  }
+
+  .searchbar__wrapper {
+    display: none;
+  }
+
+  .nav__links {
+    display: none;
+  }
+  
+  .nav__links--mobile {
+    display: flex;
+  }
+
+  .nav__categories {
+    display: none;
+  }
+
+}
