--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -60,6 +60,13 @@
   display: none;
 }
 
+@media only screen and (max-width: 1024px) { 
+
+  .header__image {
+    margin-bottom: -32px;
+  }
+}
+
 @media only screen and (max-width: 600px) {
 
   .landing__wrapper {
