--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -319,6 +319,12 @@ button {
   height: 18px;
 }
 
+@media only screen and (max-width: 1024px) { 
+  .searchbar__wrapper {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 600px) {
 
   .navbar {
